# django-chat

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml
chat/: config.toml  pyproject.toml
chat/chat/: models.py
chat/chat/migrations/: 0001_initial.py
chat/main/: asgi.py  settings.py  wsgi.py
