[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Denis"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
black = "^23.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

